--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -25,5 +25,19 @@
 .card__descricao {
     display: flex;
     justify-content: space-between;
-    
+}
+
+.card__botoes {
+  display: flex;
+  justify-content: space-between;
+}
+
+.botoes {
+  display: flex;
+}
+
+.card {
+  background:var(--branco);
+  box-shadow: 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
 }
